<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.assignment.PlayerActivity">


    <item
            android:id="@+id/item_add"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_addPlayer"
            app:showAsAction="always"/>

    <item
            android:id="@+id/item_delete"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:title="@string/menu_deletePlayer"
            app:showAsAction="always"/>


    <item
            android:id="@+id/item_cancel"
            android:icon="@drawable/ic_cancel_black_24dp"
            android:title="@string/menu_cancelPlayer"
            app:showAsAction="always"/>

    <item
            android:id="@+id/item_map"
            android:icon="@drawable/ic_room_black_24dp"
            android:title="@string/menu_addPlayer"
            app:showAsAction="always"/>

</menu>
